examples/test/testpolicy6698.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6698
  namespace: namespace247
spec:
  podSelector:
    matchLabels:
      key8: value49
      key1: value10
      key45: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value35
          key0: value32
      podSelector:
        matchLabels:
          key20: value18
